deploying a distributed system-updated pipeline.yml

--- a/databases/build.gradle
+++ b/databases/build.gradle
@@ -1,5 +1,4 @@
-import io.pivotal.pal.tracker.gradlebuild.CfMigrationPlugin
-import io.pivotal.pal.tracker.gradlebuild.LocalMigrationPlugin
+import io.pivotal.*
 
 subprojects {
     apply plugin: LocalMigrationPlugin
