deploying a distributed system-updated pipeline.yml

--- a/databases/build.gradle
+++ b/databases/build.gradle
@@ -1,4 +1,5 @@
-import io.pivotal.*
+import io.pivotal.pal.tracker.gradlebuild.CfMigrationPlugin
+import io.pivotal.pal.tracker.gradlebuild.LocalMigrationPlugin
 
 subprojects {
     apply plugin: LocalMigrationPlugin
