--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -6,7 +6,7 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://allocations-pal-tracker-api.cfapps.io
+    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-tracker-api.cfapps.io/allocations
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-allocations-database
