--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -6,7 +6,7 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://backlog-pal-tracker-api.cfapps.io
+    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-tracker-api.cfapps.io/backlog
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-backlog-database
