--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 import io.pivotal.pal.tracker.gradlebuild.DependenciesGraphPlugin
 
+
 buildscript {
     ext {
         springBootVersion = "2.0.6.RELEASE"
@@ -14,6 +15,8 @@ buildscript {
         junitVersion = "4.12"
         okhttpVersion = "3.12.0"
         jsonPathVersion = "2.4.0"
+        springCloudVersion = "Finchley.RELEASE"
+        springCloudServicesClientLibrariesVersion = "2.0.6.RELEASE"
     }
 
     repositories {
