--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -7,7 +7,7 @@ applications:
   instances: 1
   env:
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
-    GRANT_TYPES: client_credentials
+    GRANT_TYPE: client_credentials
   services:
   - tracker-registration-database
   - tracker-service-registry
