--- a/applications/registration-server/src/main/resources/application.properties
+++ b/applications/registration-server/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-    spring.application.name=registration-server
+
 
 server.port=8083
 spring.datasource.username=tracker
 spring.datasource.url=jdbc:mysql://localhost:3306/tracker_registration_dev?useSSL=false&useTimezone=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 registration.server.endpoint=http://registration-server
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=info,health,metrics,circuitbreakers,env
 
 
